--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+bin
+*.jar
+*.egg-info
+*.pyo
+*.pyc
+ip_config
+arp_cache
+rtable.*
+pox
